test/org/midica/testfiles/failing/call-with-recursion-depth.midica
INCLUDE inc/instruments.midica

CALL test1

FUNCTION test1
	CALL test2
END

FUNCTION test2
	CALL test1
END
